# ParaSol

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  HISTORY.rst  LICENSE.txt  MANIFEST.in  README.rst  history_from_github_api.py  htm  metadata_reset.py  nosetests_details.txt  project_2to3.bat  pyproject.toml  requirements.txt  setup.cfg  setup.py  summary
docs/: Makefile  build_all_html.py  conf.py  copyright.rst  example2.rst  example3.rst  examples.rst  functions.rst  history.rst  index.rst  make.bat  office.rst  quickstart.rst
docs/_static/: fold_card_feas.py  func_opt_a.py  func_opt_b.py
parasol/: CarpetPlot.py  Excel_wrapper.py  Goal.py  HTML_supt.py  LikeDict.py  LikeDict.py.bak  Optimize.py  PPT_wrapper.py  PPT_wrapper.py.bak  Plots.py  Plots_Cache.py  ProbDesc.py  Summary.py  Word_wrapper.py  __init__.py  _version.py  cast.py  htm  make_zip.py  parameters.py  parasol.htm  parasol_main.py  pytehtm  pytpytesummary  summary  xlChFormula.py
parasol/examples/: box.doc  box.htm  box.ppt  box.py  box.xlsx  box2.htm  box2.py  box2box2.summary  boxbox.summary  fold_card.htm  fold_card.py  fold_card_feas.htm  fold_card_feas.py  fold_card_feasfold_card_feas.summary  fold_cardfold_card.summary  func_opt_a.htm  func_opt_a.py  func_opt_afunc_opt_a.summary  func_opt_b.htm  func_opt_b.py  func_opt_bfunc_opt_b.summary
parasol/examples/box/: box_1__sens_sysMass_vs_L.csv  box_1__sens_sysMass_vs_W.csv  box_1__sens_sysMass_vs_h.csv  box_2__sens_Volume_vs_L.csv  box_2__sens_Volume_vs_W.csv  (+3 more)
parasol/parasol/: parasol.summary
parasol/tests/: test_parasol.py
(+20 files in other folders)
